<resources>
    <string name="app_name">Money Minder</string>
    <string name="receivable">Receivables</string>
    <string name="payable">Payables</string>
    <string name="reminders">Reminders</string>

    //For Floating Action Button
    <string name="newReceivables">New Receivable</string>
    <string name="newPayable">New Payable</string>

    //Notes on receivables
    <string name="notes_receivable">Handy notes on the amount you lent</string>

    //Receivable Details toolbar title
    <string name="receivable_details">Receivable Details</string>

    //Text Fields
    <string name="whoDidYouLendItTo">Who did you lend the money to?</string>
    <string name="totalAmountLent">Total amount you lent</string>
    <string name="date">Lent date (YYYY-MM-DD)</string>
    <string name="notes">Remarks (optional)</string>
    <string name="notes_long">You can enter a description to help you remember better</string>
    <string name="amount">Amount  </string>
    <string name="lentDate"> Lent on  </string>
    <string name="remarks">Remarks</string>

    <string name="discardChanges">Discard changes?</string>
    <string name="itemDeleted">Item deleted</string>
    <string name="undo">Undo</string>
    <string name="nothingWillBeSaved">Discard any changes made and go back?</string>

    //Buttons
    <string name="pickDate">Pick date</string>

    //Reminder
    <string name="setReminder">Reminder</string>
    <string name="done">Done</string>
    <string name="OK">OK</string>
    <string name="Cancel">CANCEL</string>
    <string name="change">Change</string>
    <string name="reminderSetat">Set for </string>
    <string name="at"> at </string>


    //MESSAGES
    <string name="saveError">Name, amount and date must be filled</string>
    <string name="dateFormatError">Date should be in MM/dd/yyyy format</string>
    <string name="recheckDates">Reminder date has to be later than lent date</string>
    <string name="reminderText">Reminder set for</string>
    <string name="reminderHint">Set a reminder</string>
    <string name="noRemarksSet">No remarks</string>
    <string name="noReminder">No reminder set</string>
    <string name="reminderNotProper">Reminder is not set properly</string>
    <string name="editingmodeon">Editing enabled</string>
    <string name="changesSaved">Changes Saved</string>


</resources>
