<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popupparentlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/nameWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/name"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/cancelEdit"
            android:layout_toStartOf="@+id/cancelEdit"
            android:text="Sunny Shrestha"
            android:textColor="@color/colorPrimary" />


        <ImageView
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/name"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/edit_button_selector"
            android:tint="@color/colorAccent"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/cancelEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editButton"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/editButton"
            android:layout_toStartOf="@+id/editButton"
            android:src="@drawable/ic_action_navigation_cancel"
            android:tint="@color/colorPrimaryDark"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/doneEditing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/name"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_action_action_done"
            android:tint="@color/colorAccent"
            android:visibility="invisible" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/amountWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nameWrapper"
        android:layout_marginTop="@dimen/padding"
        android:alpha=".8"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/amountValue"
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginStart="@dimen/padding"
            android:layout_toEndOf="@+id/fixedTextAmount"
            android:layout_toRightOf="@+id/fixedTextAmount"
            android:inputType="none"
            android:text="$4,000" />

        <TextView
            android:id="@+id/fixedTextAmount"
            style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/amountValue"
            android:layout_alignBottom="@+id/amountValue"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/amount"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dateWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/amountWrapper"
        android:alpha=".8">

        <Button
            android:id="@+id/editLentDate"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/change"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/fixedTextDate"
            style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/lentDate"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/dateLent"
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editLentDate"
            android:layout_alignBottom="@+id/editLentDate"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_toEndOf="@+id/fixedTextDate"
            android:layout_toRightOf="@+id/fixedTextDate"
            android:text="2014/08/12"
            android:textAppearance="@style/TextLabel" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/reminderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dateWrapper"
        android:layout_marginTop="@dimen/padding"
        android:alpha=".8"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/changeReminder"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/change"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/fixedTextReminder"
            style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/setReminder"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/reminderInfo"
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/fixedTextReminder"
            android:layout_toLeftOf="@id/changeReminder"
            android:gravity="fill"
            android:paddingRight="@dimen/padding"
            android:text="2014/08/08 at 11:45 PM" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/remarksWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reminderLayout"
        android:alpha=".8">

        <EditText
            android:id="@+id/remarksDetails"
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/padding"
            android:layout_toEndOf="@+id/remarksFixedText"
            android:layout_toRightOf="@+id/remarksFixedText"
            android:text="He took the money for his father's surgery and his mum's cancer treatment"
            android:textAppearance="@style/TextLabel" />

        <TextView
            android:id="@+id/remarksFixedText"
            style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:paddingTop="@dimen/padding"
            android:text="@string/remarks"
            android:textColor="@color/colorAccent" />


    </RelativeLayout>


</RelativeLayout>